// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveBasicStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ArchiveDeliveryStreamName": {
      "Description": "Name of the Firehose Delivery Stream",
      "Value": {
        "Ref": "ArchiveDeliveryStream497AB609",
      },
    },
    "LogGroupNames": {
      "Description": "Name of the CloudWatch Log Group",
      "Value": {
        "Fn::Join": [
          "",
          [
            {
              "Ref": "LogGroup106AAD846",
            },
            ", ",
            {
              "Ref": "LogGroup2477F707C",
            },
            ", ",
            {
              "Ref": "LogGroup34356AF39",
            },
            ", ",
            {
              "Ref": "LogGroup4A4E5F7C0",
            },
            ", ",
            {
              "Ref": "LogGroup5823665DB",
            },
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveDeliveryStream497AB609": {
      "DependsOn": [
        "FirehoseRoleDefaultPolicyF034DFF7",
      ],
      "Properties": {
        "DeliveryStreamEncryptionConfigurationInput": {
          "KeyType": "AWS_OWNED_CMK",
        },
        "DeliveryStreamType": "DirectPut",
        "ExtendedS3DestinationConfiguration": {
          "BucketARN": {
            "Fn::GetAtt": [
              "ArchiveBucket9DECBF5D",
              "Arn",
            ],
          },
          "BufferingHints": {
            "IntervalInSeconds": 60,
            "SizeInMBs": 64,
          },
          "CloudWatchLoggingOptions": {
            "Enabled": true,
            "LogGroupName": {
              "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
            },
            "LogStreamName": {
              "Ref": "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1",
            },
          },
          "CompressionFormat": "GZIP",
          "CustomTimeZone": "Asia/Tokyo",
          "DynamicPartitioningConfiguration": {
            "Enabled": true,
          },
          "ErrorOutputPrefix": "!{firehose:error-output-type}/!{timestamp:yyyy/MM/dd}/",
          "Prefix": "AWSLogs/!{partitionKeyFromQuery:owner}/CWLogGroup/!{partitionKeyFromQuery:logGroup}/!{timestamp:yyyy/MM/dd/HH}/",
          "ProcessingConfiguration": {
            "Enabled": true,
            "Processors": [
              {
                "Parameters": [
                  {
                    "ParameterName": "CompressionFormat",
                    "ParameterValue": "GZIP",
                  },
                ],
                "Type": "Decompression",
              },
              {
                "Parameters": [
                  {
                    "ParameterName": "MetadataExtractionQuery",
                    "ParameterValue": "{"owner":(if (.owner // "") == "" then "controlmessages" else .owner end),"logGroup":(if (.logGroup // "") == "" then "controlmessages" else (.logGroup | ltrimstr("/")) end)}",
                  },
                  {
                    "ParameterName": "JsonParsingEngine",
                    "ParameterValue": "JQ-1.6",
                  },
                ],
                "Type": "MetadataExtraction",
              },
              {
                "Parameters": [],
                "Type": "AppendDelimiterToRecord",
              },
            ],
          },
          "RoleARN": {
            "Fn::GetAtt": [
              "FirehoseRoleAA67C190",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "ArchiveDeliveryStreamLogGroupBCA5504D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlSubscriptionFilter1C707C724": {
      "DependsOn": [
        "CwlToFirehoseRoleDefaultPolicy51C34CD1",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "LogGroup106AAD846",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlSubscriptionFilter23DC2451A": {
      "DependsOn": [
        "CwlToFirehoseRoleDefaultPolicy51C34CD1",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "LogGroup2477F707C",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlSubscriptionFilter3D39F9BF2": {
      "DependsOn": [
        "CwlToFirehoseRoleDefaultPolicy51C34CD1",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "LogGroup34356AF39",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlSubscriptionFilter4E60CD400": {
      "DependsOn": [
        "CwlToFirehoseRoleDefaultPolicy51C34CD1",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "LogGroup4A4E5F7C0",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlSubscriptionFilter536DFDDAF": {
      "DependsOn": [
        "CwlToFirehoseRoleDefaultPolicy51C34CD1",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "LogGroup5823665DB",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlToFirehoseRole124D1583": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlToFirehoseRoleDefaultPolicy51C34CD1": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "firehose:PutRecord",
                "firehose:PutRecordBatch",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStream497AB609",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CwlToFirehoseRoleDefaultPolicy51C34CD1",
        "Roles": [
          {
            "Ref": "CwlToFirehoseRole124D1583",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "FirehoseRoleAA67C190": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "s3:AbortMultipartUpload",
                    "s3:ListBucket",
                    "s3:GetBucketLocation",
                    "s3:GetObject",
                    "s3:PutObject",
                    "s3:ListBucketMultipartUploads",
                    "s3:ListMultipartUploadParts",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "ArchiveBucket9DECBF5D",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "ArchiveBucket9DECBF5D",
                              "Arn",
                            ],
                          },
                          "/*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToS3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleDefaultPolicyF034DFF7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStreamLogGroupBCA5504D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FirehoseRoleDefaultPolicyF034DFF7",
        "Roles": [
          {
            "Ref": "FirehoseRoleAA67C190",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "LogGroup106AAD846": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/basic-app-1",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "LogGroup2477F707C": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/basic-app-2",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "LogGroup34356AF39": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/basic-app-3",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "LogGroup4A4E5F7C0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/basic-app-4",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "LogGroup5823665DB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/basic-app-5",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveBasicStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 2,
  "AWS::IAM::Role": 3,
  "AWS::KinesisFirehose::DeliveryStream": 1,
  "AWS::Lambda::Function": 1,
  "AWS::Logs::LogGroup": 6,
  "AWS::Logs::LogStream": 1,
  "AWS::Logs::SubscriptionFilter": 5,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveExistingStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ArchiveDeliveryStreamName": {
      "Description": "Name of the Firehose Delivery Stream",
      "Value": {
        "Ref": "ArchiveDeliveryStream497AB609",
      },
    },
    "ImportedLogGroupName": {
      "Description": "Name of the imported (existing) CloudWatch Log Group",
      "Value": "/aws/lambda/test-function",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveDeliveryStream497AB609": {
      "DependsOn": [
        "FirehoseRoleDefaultPolicyF034DFF7",
      ],
      "Properties": {
        "DeliveryStreamEncryptionConfigurationInput": {
          "KeyType": "AWS_OWNED_CMK",
        },
        "DeliveryStreamType": "DirectPut",
        "ExtendedS3DestinationConfiguration": {
          "BucketARN": {
            "Fn::GetAtt": [
              "ArchiveBucket9DECBF5D",
              "Arn",
            ],
          },
          "BufferingHints": {
            "IntervalInSeconds": 60,
            "SizeInMBs": 1,
          },
          "CloudWatchLoggingOptions": {
            "Enabled": true,
            "LogGroupName": {
              "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
            },
            "LogStreamName": {
              "Ref": "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1",
            },
          },
          "CompressionFormat": "GZIP",
          "CustomTimeZone": "Asia/Tokyo",
          "ErrorOutputPrefix": "!{firehose:error-output-type}/!{timestamp:yyyy/MM/dd}/",
          "Prefix": "!{timestamp:yyyy/MM/dd/HH}/",
          "RoleARN": {
            "Fn::GetAtt": [
              "FirehoseRoleAA67C190",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "ArchiveDeliveryStreamLogGroupBCA5504D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlSubscriptionFilter1C4C480C": {
      "DependsOn": [
        "CwlToFirehoseRoleDefaultPolicy51C34CD1",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": "/aws/lambda/test-function",
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlToFirehoseRole124D1583": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:/aws/lambda/test-function:*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlToFirehoseRoleDefaultPolicy51C34CD1": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "firehose:PutRecord",
                "firehose:PutRecordBatch",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStream497AB609",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CwlToFirehoseRoleDefaultPolicy51C34CD1",
        "Roles": [
          {
            "Ref": "CwlToFirehoseRole124D1583",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "FirehoseRoleAA67C190": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "s3:AbortMultipartUpload",
                    "s3:ListBucket",
                    "s3:GetBucketLocation",
                    "s3:GetObject",
                    "s3:PutObject",
                    "s3:ListBucketMultipartUploads",
                    "s3:ListMultipartUploadParts",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "ArchiveBucket9DECBF5D",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "ArchiveBucket9DECBF5D",
                              "Arn",
                            ],
                          },
                          "/*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToS3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleDefaultPolicyF034DFF7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStreamLogGroupBCA5504D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FirehoseRoleDefaultPolicyF034DFF7",
        "Roles": [
          {
            "Ref": "FirehoseRoleAA67C190",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveExistingStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 2,
  "AWS::IAM::Role": 3,
  "AWS::KinesisFirehose::DeliveryStream": 1,
  "AWS::Lambda::Function": 1,
  "AWS::Logs::LogGroup": 1,
  "AWS::Logs::LogStream": 1,
  "AWS::Logs::SubscriptionFilter": 1,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveExportStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ExportFunctionName": {
      "Description": "Name of the export task Lambda function",
      "Value": {
        "Ref": "ExportTaskFunctionD34B64B2",
      },
    },
    "LogGroupName": {
      "Description": "Name of the CloudWatch Log Group being exported",
      "Value": {
        "Ref": "ArchiveLogGroup397AA1AB",
      },
    },
    "ScheduleExpression": {
      "Description": "EventBridge schedule expression for the export task",
      "Value": "rate(1 day)",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetBucketAcl",
              "Condition": {
                "ArnLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveBucket9DECBF5D",
                  "Arn",
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "ArnLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:*",
                      ],
                    ],
                  },
                },
                "StringEquals": {
                  "s3:x-amz-acl": "bucket-owner-full-control",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "ArchiveBucket9DECBF5D",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveLogGroup397AA1AB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/export-app-export",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ExportSchedule86791C8A": {
      "Properties": {
        "Description": "Triggers CloudWatch Logs export task to S3 on schedule",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "Name": "TestProject-test-cwl-export-schedule",
        "ScheduleExpression": "rate(1 day)",
        "ScheduleExpressionTimezone": "Etc/UTC",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "ExportTaskFunctionD34B64B2",
              "Arn",
            ],
          },
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget6155238C9DC2CD",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "ExportTaskFunctionD34B64B2": {
      "DependsOn": [
        "ExportTaskFunctionServiceRoleDefaultPolicy13725853",
        "ExportTaskFunctionServiceRoleE75B9D77",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "bfd3649f5fc05155bd2f37a1be8f27e6c23ed7f4376d0d64e581869d107ab9c6.zip",
        },
        "Description": "Schedules a CloudWatch Logs export task to S3",
        "Environment": {
          "Variables": {
            "LOG_GROUP_NAME": {
              "Ref": "ArchiveLogGroup397AA1AB",
            },
            "S3_BUCKET_NAME": {
              "Ref": "ArchiveBucket9DECBF5D",
            },
            "S3_PREFIX": "exports",
          },
        },
        "FunctionName": "TestProject-test-cwl-export-task",
        "Handler": "index.lambda_handler",
        "LoggingConfig": {
          "ApplicationLogLevel": "INFO",
          "LogFormat": "JSON",
          "LogGroup": {
            "Ref": "ExportTaskFunctionLogGroupCA581CE6",
          },
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "ExportTaskFunctionServiceRoleE75B9D77",
            "Arn",
          ],
        },
        "Runtime": "python3.14",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ExportTaskFunctionLogGroupCA581CE6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "ExportTaskFunctionServiceRoleDefaultPolicy13725853": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateExportTask",
                "logs:DescribeExportTasks",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ExportTaskFunctionServiceRoleDefaultPolicy13725853",
        "Roles": [
          {
            "Ref": "ExportTaskFunctionServiceRoleE75B9D77",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ExportTaskFunctionServiceRoleE75B9D77": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SchedulerRoleForTarget6155238C9DC2CD": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": "123456789012",
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":scheduler:ap-northeast-1:123456789012:schedule-group/default",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "SchedulerRoleForTarget615523DefaultPolicyB87EBA12": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ExportTaskFunctionD34B64B2",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ExportTaskFunctionD34B64B2",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SchedulerRoleForTarget615523DefaultPolicyB87EBA12",
        "Roles": [
          {
            "Ref": "SchedulerRoleForTarget6155238C9DC2CD",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveExportStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 2,
  "AWS::IAM::Role": 3,
  "AWS::Lambda::Function": 2,
  "AWS::Logs::LogGroup": 2,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "AWS::Scheduler::Schedule": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveLambdaStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ArchiveFunctionName": {
      "Description": "Name of the archive Lambda function",
      "Value": {
        "Ref": "ArchiveFunctionA0679466",
      },
    },
    "LogGroupName": {
      "Description": "Name of the CloudWatch Log Group being archived",
      "Value": {
        "Ref": "ArchiveLogGroup397AA1AB",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveFunctionA0679466": {
      "DependsOn": [
        "ArchiveFunctionServiceRoleDefaultPolicy68B6A46E",
        "ArchiveFunctionServiceRoleF147C845",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "4e6097a2f207594d684e69e35db63abf24d1f1e67097a6838968c1040032b966.zip",
        },
        "Description": "Receives CloudWatch Logs events and writes them to S3",
        "Environment": {
          "Variables": {
            "S3_BUCKET_NAME": {
              "Ref": "ArchiveBucket9DECBF5D",
            },
            "S3_PREFIX": "subscriptions",
          },
        },
        "FunctionName": "TestProject-test-cwl-to-s3",
        "Handler": "index.lambda_handler",
        "LoggingConfig": {
          "ApplicationLogLevel": "INFO",
          "LogFormat": "JSON",
          "LogGroup": {
            "Ref": "ArchiveFunctionLogGroup7F6422FB",
          },
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "ArchiveFunctionServiceRoleF147C845",
            "Arn",
          ],
        },
        "Runtime": "python3.14",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ArchiveFunctionLogGroup7F6422FB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveFunctionServiceRoleDefaultPolicy68B6A46E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ArchiveFunctionServiceRoleDefaultPolicy68B6A46E",
        "Roles": [
          {
            "Ref": "ArchiveFunctionServiceRoleF147C845",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ArchiveFunctionServiceRoleF147C845": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ArchiveLogGroup397AA1AB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/lambda-app-lambda",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlSubscriptionFilter1C4C480C": {
      "DependsOn": [
        "CwlSubscriptionFilterCanInvokeLambda002C3E67",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveFunctionA0679466",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "ArchiveLogGroup397AA1AB",
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlSubscriptionFilterCanInvokeLambda002C3E67": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ArchiveFunctionA0679466",
            "Arn",
          ],
        },
        "Principal": "logs.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "ArchiveLogGroup397AA1AB",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveLambdaStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 1,
  "AWS::IAM::Role": 2,
  "AWS::Lambda::Function": 2,
  "AWS::Lambda::Permission": 1,
  "AWS::Logs::LogGroup": 2,
  "AWS::Logs::SubscriptionFilter": 1,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveLifecycleStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ArchiveDeliveryStreamName": {
      "Description": "Name of the Firehose Delivery Stream",
      "Value": {
        "Ref": "ArchiveDeliveryStream497AB609",
      },
    },
    "LifecycleSummary": {
      "Description": "Summary of the S3 lifecycle transition rules",
      "Value": "IA:30d → Glacier:90d → DeepArchive:365d → Expire:2555d",
    },
    "LogGroupName": {
      "Description": "Name of the CloudWatch Log Group",
      "Value": {
        "Ref": "ArchiveLogGroup397AA1AB",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "Id": "MoveToIAAfter30Days",
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "STANDARD_IA",
                  "TransitionInDays": 30,
                },
              ],
            },
            {
              "Id": "MoveToGlacierAfter90Days",
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "GLACIER_IR",
                  "TransitionInDays": 90,
                },
              ],
            },
            {
              "Id": "MoveToDeepArchiveAfter365Days",
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "DEEP_ARCHIVE",
                  "TransitionInDays": 365,
                },
              ],
            },
            {
              "ExpirationInDays": 2555,
              "Id": "ExpireCurrentObjectsAfter2555Days",
              "Status": "Enabled",
            },
            {
              "Id": "NoncurrentVersionTransitionToIAAfter30Days",
              "NoncurrentVersionTransitions": [
                {
                  "StorageClass": "STANDARD_IA",
                  "TransitionInDays": 30,
                },
              ],
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveDeliveryStream497AB609": {
      "DependsOn": [
        "FirehoseRoleDefaultPolicyF034DFF7",
      ],
      "Properties": {
        "DeliveryStreamEncryptionConfigurationInput": {
          "KeyType": "AWS_OWNED_CMK",
        },
        "DeliveryStreamType": "DirectPut",
        "ExtendedS3DestinationConfiguration": {
          "BucketARN": {
            "Fn::GetAtt": [
              "ArchiveBucket9DECBF5D",
              "Arn",
            ],
          },
          "BufferingHints": {
            "IntervalInSeconds": 60,
            "SizeInMBs": 1,
          },
          "CloudWatchLoggingOptions": {
            "Enabled": true,
            "LogGroupName": {
              "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
            },
            "LogStreamName": {
              "Ref": "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1",
            },
          },
          "CompressionFormat": "GZIP",
          "CustomTimeZone": "Asia/Tokyo",
          "ErrorOutputPrefix": "!{firehose:error-output-type}/!{timestamp:yyyy/MM/dd}/",
          "Prefix": "!{timestamp:yyyy/MM/dd/HH}/",
          "RoleARN": {
            "Fn::GetAtt": [
              "FirehoseRoleAA67C190",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "ArchiveDeliveryStreamLogGroupBCA5504D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveLogGroup397AA1AB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/lifecycle-app",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlSubscriptionFilter1C4C480C": {
      "DependsOn": [
        "CwlToFirehoseRoleDefaultPolicy51C34CD1",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "ArchiveLogGroup397AA1AB",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlToFirehoseRole124D1583": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlToFirehoseRoleDefaultPolicy51C34CD1": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "firehose:PutRecord",
                "firehose:PutRecordBatch",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStream497AB609",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CwlToFirehoseRoleDefaultPolicy51C34CD1",
        "Roles": [
          {
            "Ref": "CwlToFirehoseRole124D1583",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "FirehoseRoleAA67C190": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "s3:AbortMultipartUpload",
                    "s3:ListBucket",
                    "s3:GetBucketLocation",
                    "s3:GetObject",
                    "s3:PutObject",
                    "s3:ListBucketMultipartUploads",
                    "s3:ListMultipartUploadParts",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "ArchiveBucket9DECBF5D",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "ArchiveBucket9DECBF5D",
                              "Arn",
                            ],
                          },
                          "/*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToS3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleDefaultPolicyF034DFF7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStreamLogGroupBCA5504D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FirehoseRoleDefaultPolicyF034DFF7",
        "Roles": [
          {
            "Ref": "FirehoseRoleAA67C190",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveLifecycleStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 2,
  "AWS::IAM::Role": 3,
  "AWS::KinesisFirehose::DeliveryStream": 1,
  "AWS::Lambda::Function": 1,
  "AWS::Logs::LogGroup": 2,
  "AWS::Logs::LogStream": 1,
  "AWS::Logs::SubscriptionFilter": 1,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;
